<resources>
    <string name="app_name">AboutMe</string>
    <string name="jorgeazzufranco">JorgeAzzuFranco</string>
    <string name="blackheartiswo">BlackHeartIswo</string>
    <string name="jorge_cuadra_13">jorge.cuadra.13@gmail.com</string>
    <string name="_7007_9623">7007-9623</string>
    <string name="nombre">Jorge Alberto Franco Cuadra</string>
    <string name="powered">Powered by: Jorge Franco</string>
</resources>
