<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.jorgeazzufranco.aboutme.MainActivity">

    <ImageView
        android:id="@+id/jorgito"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/jorge" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="#000"
        android:textSize="32sp"
        android:text="@string/nombre"/>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textColor="#333"
        android:textSize="24sp"
        android:text="Ingeniero Informatico"/>


    <LinearLayout
        android:id="@+id/git"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/foto"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            app:srcCompat="@drawable/github" />

        <TextView
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/jorgeazzufranco"/>

        <ImageView
            android:id="@+id/twitter"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            app:srcCompat="@drawable/twitter" />

        <TextView
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/blackheartiswo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="4dp"
            android:src="@drawable/gmail"/>

        <TextView
            android:id="@+id/correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/jorge_cuadra_13"/>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:src="@drawable/telefono"/>

        <TextView
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/_7007_9623"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/powered"
            android:textColor="#000"
            android:textSize="12sp" />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Share"
            android:onClick="compartir"/>

    </RelativeLayout>
</LinearLayout>

